@@ -1815,6 +1815,14 @@
 	the last model), and <lit>$pd</lit> holds the frequency or
 	periodicity of the data (e.g. 4 for quarterly data).</para>
 
+      <para>Two special internal scalars, <lit>$test</lit> and
+	<lit>$pvalue</lit>, hold respectively the value and the
+	p-value of the test statistic that was generated by the last
+	explicit hypothesis-testing command, if any (e.g.
+	<lit>chow</lit>).  Please see <manref targ="chap-genr"/> for
+	details on this.
+      </para>
+
       <para>The variable <lit>t</lit> serves as an index of the
 	observations. For instance <lit>genr dum = (t=15)</lit>
 	will generate a dummy variable that has value 1 for
@@ -4333,12 +4341,13 @@
 	end restrict</code>
 
       <para>In the single-equation case the restrictions are evaluated
-	via a Wald F-test, using the coefficient covariance matrix of
-	the model in question.  In the system case, the full results
-	of estimating the system subject to the restrictions are
-	shown; the test statistic depends on the estimator chosen (a
-	Likelihood Ratio test if the system is estimated using a
-	Maximum Likelihood method, or an asymptotic F-test otherwise.)
+	via a Wald <mathvar>F</mathvar>-test, using the coefficient
+	covariance matrix of the model in question.  In the system
+	case, the full results of estimating the system subject to the
+	restrictions are shown; the test statistic depends on the
+	estimator chosen (a Likelihood Ratio test if the system is
+	estimated using a Maximum Likelihood method, or an asymptotic
+	<mathvar>F</mathvar>-test otherwise.)
       </para>
 
     </description>
@@ -4629,6 +4638,15 @@
 	    OLS estimates.</cell>
 	</row>
 	<row>
+	  <cell><lit>seed</lit></cell>
+	  <cell>value: an unsigned integer.  Sets the seed for the
+	    pseudo-random number generator.  By default this is set
+	    from the system time; if you want to generate repeatable
+	    sequences of random numbers you must set the seed
+	    manually.
+	  </cell>
+	</row>
+	<row>
 	  <cell><lit>hac_lag</lit></cell>
 	  <cell>values: <lit>nw1</lit> (the default) or
 	    <lit>nw2</lit>, or an integer.  Sets the maximum lag
@@ -4692,6 +4710,22 @@
 	  to use 100 times the square of the periodicity, which gives
 	  100 for annual data, 1600 for quarterly data, and so
 	  on.</cell>
+	</row>
+	<row>
+	  <cell><lit>bkbp_limits</lit></cell>
+	  <cell>values: two integers, the second greater than the
+	    first (the defaults are 8 and 32).  Sets the frequency
+	    bounds for the Baxter&ndash;King bandpass filter (see the
+	    <lit>bkfilt</lit> function under the <cmd>genr</cmd>
+	    command).
+	  </cell>
+	</row>
+	<row>
+	  <cell><lit>bkbp_k</lit></cell>
+	  <cell>value: one integer (the default is 8).  Sets the
+	    approximation order for the Baxter&ndash;King bandpass
+	    filter.
+	  </cell>
 	</row>
       </table>
 
